implements transaction deletion coincident with related account deletion and swagger annotation fixes to improve UI testing capabilities
