# docs/swagger.json
@@ -84,7 +84,7 @@
                 }
             }
         },
-        "/accounts/:id": {
+        "/accounts/{id}": {
             "get": {
                 "security": [
                     {
@@ -102,6 +102,15 @@
                     "Accounts"
                 ],
                 "summary": "fetches an account record by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -140,6 +149,15 @@
                     "Accounts"
                 ],
                 "summary": "update an account record",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -178,6 +196,15 @@
                     "Accounts"
                 ],
                 "summary": "delete an account record",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -264,6 +291,15 @@
                     "Tranasctions"
                 ],
                 "summary": "list all transaction records",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "transaction ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -330,7 +366,7 @@
                 }
             }
         },
-        "/transactions/:id": {
+        "/transactions/{id}": {
             "get": {
                 "security": [
                     {
@@ -348,6 +384,15 @@
                     "Tranasctions"
                 ],
                 "summary": "delete a transaction record",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "transaction ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content",
@@ -386,6 +431,15 @@
                     "Tranasctions"
                 ],
                 "summary": "update the amount of a transaction record",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "transaction ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -424,6 +478,15 @@
                     "Tranasctions"
                 ],
                 "summary": "delete a transaction record",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "transaction ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
